Fixed scroll/overflow issue
overflow x axis hidden

--- a/vacationplanner/src/App.css
+++ b/vacationplanner/src/App.css
@@ -38,7 +38,8 @@ DONE:
 .searchResults {
   display: flex;
   flex-direction: column;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
   width: 100%;
   height: 570px;
 }
@@ -81,7 +82,8 @@ DONE:
   flex-direction: row;
   display: flex;
   flex-direction: column;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
   padding-right: 40px;
 }
 
